# VeriSC

./: .gitignore  CMakeLists.txt  EnvConfig.h.in  LICENSE  README.md  deps_cfg.cmake.in  veriSCConfig.cmake.in  verisc_config.cmake
cmake/: CMakeGraphVizOptions.cmake  SC_UVM_envConfig.cmake.in  find_systemc.cmake  flatten_rtl_lib.cmake  rtllib.cmake  safe_get_target_property.cmake  sc_uvm_env_setup.cmake  sc_uvm_env_setup.cmake.in  verilator.cmake
cmake/synopsys/: cosim_defaults.map  vcs.cmake
cmake/verilator/: find_libs.cmake  verilator.cmake  verilator_ext_prj.cmake
examples/crave_rand/: CMakeLists.txt  crave_test_lib.h  env.h  sc_main.cpp  seq_lib.h
examples/nmi2apb/: CMakeLists.txt  env.cpp  env.h  nmi_sequence.cpp  nmi_sequence.h  sc_main.cpp  scoreboard.cpp  scoreboard.h
examples/nmi2apb/inc/: env.h  scoreboard.h
examples/nmi2apb/rtl/: CMakeLists.txt  nmi2apb.v
examples/nmi2apb/src/: env.cpp  sc_main.cpp  scoreboard.cpp
examples/simple_sc_verilog/: CMakeLists.txt  sc_main.cpp
examples/simple_sc_verilog/rtl/: CMakeLists.txt  adder.v
gcc/: CMakeLists.txt  check_gcc_version.cmake  gccConfig.cmake.in  gcc_conf.cmake.in
lib/cmake/SC_UVM_env/: SC_UVM_envConfig.cmake
scripts/: graphviz_shorten_path.py  install_cmake.sh  open_vcd_files_in_dir.py  pick_gtkw_file.py
src/: CMakeLists.txt
src/apb/: CMakeLists.txt
src/apb/inc/: apb.h  apb_agent.h  apb_config.h  apb_driver.h  apb_if.h  apb_modes.h  apb_monitor.h  apb_rw.h  apb_sequence.h  apb_sequencer.h  univ_subscriber.h
src/apb/src/: apb_agent.cpp  apb_driver.cpp  apb_monitor.cpp  apb_rw.cpp  apb_sequence.cpp
src/common/: CMakeLists.txt  tristate.h
src/common/inc/: univ_subscriber.h
src/i2c/: CMakeLists.txt
src/i2c/inc/: i2c_agent.h  i2c_if.h  i2c_monitor.h  i2c_rw.h  i2c_sequencer.h  univ_subscriber.h
src/i2c/src/: i2c_driver.cpp  i2c_if.cpp  i2c_monitor.cpp
src/nmi/: CMakeLists.txt
src/nmi/inc/: nmi.h  nmi_agent.h  nmi_driver.h  nmi_if.h  nmi_modes.h  nmi_monitor.h  nmi_rw.h  nmi_sequence.h  nmi_sequencer.h
src/nmi/src/: nmi_agent.cpp  nmi_driver.cpp  nmi_monitor.cpp  nmi_sequence.cpp
tools/: CMakeLists.txt  libs_conf.cmake.in  source.sh.in
tools/crave/: CMakeLists.txt  CUDDConfig.cmake.in  crave_cmake.txt  crave_conf.cmake.in
tools/fc4sc/: CMakeLists.txt  fc4scConfig.cmake
tools/scv/: CMakeLists.txt  scvConfig.cmake
tools/systemc/: CMakeLists.txt
tools/systemc-ams/: CMakeLists.txt
tools/uvm-systemc/: CMakeLists.txt  uvm-systemcConfig.cmake
tools/verilator/: CMakeLists.txt  verilator-config.patch
tools_vcs/: CMakeLists.txt  libs_conf.cmake.in  vcs_home_resolve.cmake
uvc/: CMakeLists.txt  uvcConfig.cmake
uvc/apb/: CMakeLists.txt  apb.h
uvc/apb/inc/: apb.h  apb_agent.h  apb_driver.h  apb_if.h  apb_mem_slave.h  apb_modes.h  apb_monitor.h  apb_rw.h  apb_sequencer.h
uvc/apb/src/: apb_agent.cpp  apb_driver.cpp  apb_monitor.cpp  apb_rw.cpp
uvc/cmake/: get_libs.cmake
uvc/common/: CMakeLists.txt
uvc/common/inc/: tristate.h  univ_subscriber.h
uvc/i2c/: CMakeLists.txt  i2c.h
uvc/i2c/inc/: i2c.h  i2c_agent.h  i2c_driver.h  i2c_if.h  i2c_modes.h  i2c_monitor.h  i2c_rw.h  i2c_sequencer.h
uvc/i2c/src/: i2c_agent.cpp  i2c_driver.cpp  i2c_if.cpp  i2c_monitor.cpp  i2c_rw.cpp
uvc/nmi/: CMakeLists.txt  nmi.h
uvc/nmi/inc/: nmi.h  nmi_agent.h  nmi_driver.h  nmi_if.h  nmi_modes.h  nmi_monitor.h  nmi_rw.h  nmi_sequencer.h
uvc/nmi/src/: nmi_agent.cpp  nmi_driver.cpp  nmi_monitor.cpp  nmi_rw.cpp
